added simple pojo

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -43,7 +43,7 @@
         <!-- see: https://github.com/Atmosphere/atmosphere/wiki/Configuring-Atmosphere-using-the-web.xml-or-atmosphere.xml -->
         <init-param>
             <param-name>org.atmosphere.servlet</param-name>
-            <param-value>com.bowlingx.websocket.WebsocketServlet</param-value>
+            <param-value>com.bowlingx.websocket.PojoServlet</param-value>
         </init-param>
         <init-param>
             <param-name>org.atmosphere.cpr.broadcaster.shareableThreadPool</param-name>
@@ -63,10 +63,18 @@
             <param-name>org.atmosphere.cpr.CometSupport.maxInactiveActivity</param-name>
             <param-value>50000</param-value>
         </init-param>
+        <init-param>
+            <param-name>org.atmosphere.cpr.sessionSupport</param-name>
+            <param-value>true</param-value>
+        </init-param>
         <!-- Add Heartbeat to prevent connection loss:
             see https://github.com/Atmosphere/atmosphere/wiki/Keeping-a-connection-active-using-an-Heartbeat-AtmosphereInterceptor-->
         <init-param>
             <param-name>org.atmosphere.cpr.AtmosphereInterceptor</param-name>
+            <param-value>org.atmosphere.interceptor.HeartbeatInterceptor</param-value>
+        </init-param>
+        <init-param>
+            <param-name>org.atmosphere.cpr.</param-name>
             <param-value>org.atmosphere.interceptor.HeartbeatInterceptor</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
