downgrade to atmosphere rc1, added shiro subject test

--- a/src/main/resources/shiro.ini
+++ b/src/main/resources/shiro.ini
@@ -31,7 +31,6 @@ authcBasic.applicationName = WebsocketLogin
 # when you only need a small number of statically-defined
 # set of User accounts.
 david = 123
-kristina = 123
 [roles]
 # The 'roles' section is for simple deployments
 # when you only need a small number of statically-defined
@@ -39,3 +38,4 @@ kristina = 123
 
 [urls]
 # Security for Urls
+/** authcBasic
